--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             </a>
             <div class="header__menu"></div>
         </div>
+    </header>
         <section class="hero">
             <div class="hero__container container">
                 <h1 class="hero__container-title font__family-oswald">РЕАЛИЗУЕМ КРУПНЕЙШИЕ
                 ПРОЕКТЫ В РОССИИ</h1>
                 <p class="hero__container-description font__family-oswald">стадионы, газопроводы, мосты, дамбы</p>
             </div>
-        </section>
-        <section class="years">
+                <article class="years">
             <div class="years__container container">
                 <div class="years__container-item">
                     <span class="years__container-item-span font__family-oswald">26</span>
@@ -45,8 +45,10 @@
                     <p class="years__container-item-narinke font__family-oswald">на рынке</p>
                 </div>
             </div>
+            </article>
         </section>
-    </header>
+
+    
     <section class="projects">
         <h2 class="projects-title title">НАШИ САМЫЕ БОЛЬШИЕ ПРОЕКТЫ</h2>
         <div class="projects__container container">
@@ -73,9 +75,7 @@
                 <h2 class="smart__project__container-title">САМЫЕ УМНЫЕ ПРОЕКТЫ</h2>
                 <p class="smart__project__container-description">РЕАЛИЗУЕМ САМЫЕ СМЕЛЫЕ РЕШЕНИЯ В РОССИИ!</p>
             </div>
-            <div class="smart__projects-btn btn">
-                <button class="btn-projects btn">ВАШ ЗАПРОС</button>
-            </div>
+            <button class="btn-projects btn">ВАШ ЗАПРОС</button>
         </div>
     </section>
     <section class="buildings">
@@ -190,9 +190,8 @@
                 <h2 class="smart__project__container-title">ХОТИТЕ С НАМИ РАБОТАТЬ?</h2>
                 <p class="smart__project__container-description">ОСТАВЬТЕ ЗАЯВКУ И МЫ СВЯЖЕМСЯ С ВАМИ!</p>
             </div>
-            <div class="smart__projects-btn btn">
-                <button class="btn-projects btn">ВАШ ЗАПРОС</button>
-            </div>
+            <button class="btn-projects btn">ВАШ ЗАПРОС</button>
+
         </div>
     </section>
     <section class="contacts">
