--- a/index.html
+++ b/index.html
@@ -155,33 +155,33 @@
     <section class="reviews">
         <h2 class="reviews__title title">отзывы о работе с нами</h2>
             <ul class="reviews__container container">
-                <div class="reviews__container-item">
-                    <li class="reviews__container-item-link">
+                <li class="reviews__container-item">
+                    <div class="reviews__container-item-link">
                         <p class="reviews__container-item-link-description font__family-open-sans">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов.</p>
-                    </li>
+                    </div>
                     <div class="reviews__bottom">
                         <h4 class="reviews__bottom__title">Иванов Иван,</h4>
                         <h4 class="reviews__bottom__title-red">ООО “Газпром-Арена”</h4>
                     </div>
-                </div>
-                <div class="reviews__container-item">
-                    <li class="reviews__container-item-link">
+                </li>
+                <li class="reviews__container-item">
+                    <div class="reviews__container-item-link">
                         <p class="reviews__container-item-link-description font__family-open-sans">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов.</p>
-                    </li>
+                    </div>
                     <div class="reviews__bottom">
                         <h4 class="reviews__bottom__title">Иванов Иван,</h4>
                         <h4 class="reviews__bottom__title-red">ООО “Газпром-Арена”</h4>
                     </div>
-                </div>
-                <div class="reviews__container-item">
-                    <li class="reviews__container-item-link">
+                </li>
+                <li class="reviews__container-item">
+                    <div class="reviews__container-item-link">
                         <p class="reviews__container-item-link-description font__family-open-sans">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов.</p>
-                    </li>
+                    </div>
                     <div class="reviews__bottom">
                         <h4 class="reviews__bottom__title">Иванов Иван,</h4>
                         <h4 class="reviews__bottom__title-red">ООО “Газпром-Арена”</h4>
                     </div>
-                </div>
+                </li>
         </ul>
     </section>
     <section class="smart-projects">
