--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>testsite</title>
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="shortcut icon" type="image/png" href="./icon/icon.png"/>
 </head>
 <body>
     <header class="header">
@@ -206,8 +207,8 @@
                 <div class="contacts__container-list-item">
                     <img class="contacts__container-list-item-img" src="./images/phone.png" alt="phone">
                     <span class="font__family-oswald-title">ТЕЛЕФОН:</span>
-                    <a href="tel:8 (812) 111-22-33" class="contacts__container-list-item-link font__family-oswald-description">8 (812) 111-22-33</a>
-                    <a href="tel:8 (812) 111-22-33" class="contacts__container-list-item-link font__family-oswald-description">8 (812) 111-22-33</a>
+                    <a href="tel:8 8121112233" class="contacts__container-list-item-link font__family-oswald-description">8 (812) 111-22-33</a>
+                    <a href="tel:8 8121112233" class="contacts__container-list-item-link font__family-oswald-description">8 (812) 111-22-33</a>
                 </div>
                 <div class="contacts__container-list-item">
                     <img class="contacts__container-list-item-img" src="./images/clock.png" alt="cloсk">
